...
      handle: handle,
    });
  };

  const styles = useThemedStyles(styleSheet);
  return (
    <PageBackground accessibilityLabel="registration page">
      <MemoedTextInputWithHelperText
        defaultValue={props.credentials.token}
        label="your new access token"
        disabled={loading}
        setText={text => setToken(text)}
        secureTextEntry
...
